Maybe I can edit styles

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,3 +4,7 @@
 @import
   "minima/skins/{{ site.minima.skin | default: 'dark' }}",
   "minima/initialize";
+
+h1, h2, h3, h4, h5, h6 {
+    color:bisque;
+}
