--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,3 +1,11 @@
-h1, h2, h3, h4, h5, h6 {
-    color:bisque;
+h1 {
+    color:#87d37c;
+}
+
+h2 {
+    color:#86e2d5;
+} 
+
+h3 {
+    color:#038aff;
 }
