--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,8 @@
             {% endif -%}
             {% if site.author.email -%}
               <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
+              <li><a class="u-email" href="https://www.linkedin.com/in/chrisjudkins">LinkedIn</a></li>
+              <li><a class="u-email" href="https://www.vimeo.com/chrisjudkins">Vimeo</a></li>
             {%- endif %}
           </ul>
         {%- endif %}
