--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,19 +1,21 @@
 h1 {
-    color:#87d37c;
+    color:#88d37c;
 }
 
 h2 {
-    color:#86e2d5;
+    color:#8ac4f4;
 } 
 
 h3 {
-    color:#038aff;
+    color:#c69eff;
 }
 
 b, strong {
-    color: #ffa182;
+    color: #ffffff;
 }
 
 i, em {
-    color:#ffe882;
+    color:#c69eff;
 }
+
+$dm-background-color:      #0f0f12 !default;
