--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,13 +1,13 @@
 h1 {
-    color:#88d37c;
+    color:#ff8a78;
 }
 
 h2 {
-    color:#c69eff;
+    color:#fabe58;
 } 
 
 h3 {
-    color:#8ac4f4;
+    color:#ffec8b;
 }
 
 b, strong {
@@ -15,7 +15,7 @@ b, strong {
 }
 
 i, em {
-    color:#baa074;
+    color:#fabe58;
 }
 
 body {
