--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -3,11 +3,11 @@ h1 {
 }
 
 h2 {
-    color:#fabe58;
+    color:#88d37c;
 } 
 
 h3 {
-    color:#ffec8b;
+    color:#84beec;
 }
 
 b, strong {
@@ -15,7 +15,7 @@ b, strong {
 }
 
 i, em {
-    color:#ffec8b;
+    color:#bc97f3;
 }
 
 body {
